# agent-backend

./: .env.example  .env.render  .gitignore  Dockerfile  main.py  pyproject.toml  readme.md  render.yaml  requirements-dev.txt  requirements.txt  test_runner.py
db/: mongo.py
demo/: README.md  interactive_demo.py  voice_agent_demo.py
docs/: deployment.md
models/: schemas.py
routers/: auth.py  dbquery.py  product.py  store.py  voice_agent.py
scripts/: populate_db.py  test_audio.py  test_deepgram_stt.py  test_deepgram_tts.py  test_whisper_stt.py
services/: deepgram_stt.py  deepgram_tts.py  gpt_agent.py  openai_stt.py  openai_tts.py  product_query.py  sesame_stt.py  sesame_tts.py  whisper_stt.py
services/tts/: __init__.py  audio_processing.py  generator.py  models.py  service.py  text_normalizer.py
tests/: __init__.py  test_voice_agent.py
utils/: jwt.py
