[project]
name = "agent-backend"
version = "0.1.0"
description = "FastAPI-based backend for voice-based retail assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.33.4",
    "motor>=3.7.1",
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn[standard]>=0.35.0",
]
